auth ui and model

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,13 @@ flutter:
   assets:
     #machine learning model
     - assets/models/
+    - assets/images/
+    - assets/icons/
 
 
 
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
