--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,18 @@ dependencies:
   camera: ^0.8.1
   meta: ^1.3.0
   tflite: ^1.1.2
-  opencv: ^1.0.4
+
+  #firebase integration
+  firebase_core: ^1.3.0
+  cloud_firestore: ^2.3.0
+  firebase_storage: ^9.0.0
+  firebase_auth: ^2.0.0
+
+  #connection
+  http: ^0.13.3
+
+
+
 
 
 
