--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   camera: ^0.8.1
   meta: ^1.3.0
   tflite: ^1.1.2
+  shared_preferences: ^2.0.6
+
 
   #firebase integration
   firebase_core: ^1.3.0
